@@ -4,24 +4,21 @@ package com.articulate.sigma;
 copyright Teknowledge (c) 2003 and reused under the terms of the GNU license.
 This software is released under the GNU Public License <http://www.gnu.org/copyleft/gpl.html>.
 Users of this code also consent, by use of this code, to credit Articulate Software
-and Teknowledge in any writings, briefings, publications, presentations, or 
-other representations of any software which incorporates, builds on, or uses this 
+and Teknowledge in any writings, briefings, publications, presentations, or
+other representations of any software which incorporates, builds on, or uses this
 code.  Please cite the following article in any publication with references:
 
-Pease, A., (2003). The Sigma Ontology Development Environment, 
+Pease, A., (2003). The Sigma Ontology Development Environment,
 in Working Notes of the IJCAI-2003 Workshop on Ontology and Distributed Systems,
 August 9, Acapulco, Mexico.
 */
 
-import java.awt.image.RenderedImage;
-import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.lang.ProcessBuilder.Redirect;
 import java.util.*;
-
-import javax.imageio.ImageIO;
 
 import com.articulate.sigma.utils.FileUtil;
 import com.articulate.sigma.utils.StringUtil;
@@ -29,24 +26,24 @@ import com.articulate.sigma.utils.StringUtil;
 /** Handle operations for creating a graphical representation of partial
  *  ordering relations.  Supports Graph.jsp.  */
 public class Graph {
-	
-	  // a limit counter to prevent pathologically large graphs
-    private int graphsize = 0;                    
-    
-      // A map of the fields to display in the graph in addition to the 
-      // indented term name with option names as keys and "yes", "no" as values.
-    public TreeMap<String,String> columnList = new TreeMap<String,String>();
+
+    // a limit counter to prevent pathologically large graphs
+    private int graphsize = 0;
+
+    // A map of the fields to display in the graph in addition to the
+    // indented term name with option names as keys and "yes", "no" as values.
+    public Map<String,String> columnList = new TreeMap<>();
 
     public static String indent = "&nbsp;&nbsp;&nbsp;&nbsp;";
 
-    public TreeSet<String> errors = new TreeSet<>();
+    public Set<String> errors = new TreeSet<>();
 
     public static boolean debug = false;
 
     /** *************************************************************
      */
     public Graph() {
-  	
+
         columnList.put("documentation","yes");
         columnList.put("direct-children","yes");
         columnList.put("graph","yes");
@@ -59,20 +56,21 @@ public class Graph {
     private String generateChildrenColumn(KB kb, String term) {
 
         // probably should find all instances of PartialOrderingRelation
-        ArrayList<String> relations = new ArrayList<String>();
+        List<String> relations = new ArrayList<>();
         relations.add("instance");
         relations.add("subclass");
         relations.add("subrelation");
         relations.add("subAttribute");
 
         int count = 0;
+        List<Formula> children;
         for (int i = 0; i < relations.size(); i++) {
-            ArrayList<Formula> children = kb.askWithRestriction(0,relations.get(i),2,term);
-            if (children != null) 
+            children = kb.askWithRestriction(0,relations.get(i),2,term);
+            if (children != null)
                 count = count + children.size();
         }
         if (count > 0)
-            return Integer.toString(count);       
+            return Integer.toString(count);
         else
             return ".";
     }
@@ -89,18 +87,19 @@ public class Graph {
     }
 
     /** *************************************************************
-     * @return an HTML-formatted String consisting of the first 100 
+     * @return an HTML-formatted String consisting of the first 100
      * characters of the documentation string for the term parameter
      */
     private String generateDocumentationColumn(KB kb, String term, String href, String language) {
 
-        String docString = "";
-        ArrayList<Formula> docStmts = kb.askWithTwoRestrictions(0,"documentation",1,term,2,language);
-        if (docStmts.size() > 0) {
-            Formula doc = (Formula) docStmts.get(0);
+        String docString;
+        List<Formula> docStmts = kb.askWithTwoRestrictions(0,"documentation",1,term,2,language);
+        Formula doc;
+        if (!docStmts.isEmpty()) {
+            doc = (Formula) docStmts.get(0);
             docString = doc.getStringArgument(3);
             if (!DB.emptyString(docString)) {
-                if (docString.length() > 100) 
+                if (docString.length() > 100)
                     docString = docString.substring(1,100) + "...";
                 else
                     docString = docString.substring(1,docString.length()-1);
@@ -117,11 +116,10 @@ public class Graph {
     public int columnCount() {
 
         int counter = 0;
-        Iterator<String> it = columnList.keySet().iterator();
-        while (it.hasNext()) {
-            String col = it.next();
-            String val = columnList.get(col);
-            if (val.equals("yes")) 
+        String val;
+        for (String col : columnList.keySet()) {
+            val = columnList.get(col);
+            if (val.equals("yes"))
                 counter++;
         }
         return counter;
@@ -133,14 +131,13 @@ public class Graph {
      */
     private String createColumnHeader() {
 
-        StringBuffer result = new StringBuffer();
+        StringBuilder result = new StringBuilder();
         result.append("<tr bgcolor=#EEEEEE><td></td>");             // a blank column for the indented terms
-        Iterator<String> it = columnList.keySet().iterator();
-        while (it.hasNext()) {
-            String col = it.next();
-            String val = columnList.get(col);
-            if (val.equals("yes")) 
-                result.append("<td>" + col + "</td>");            
+        String val;
+        for (String col : columnList.keySet()) {
+            val = columnList.get(col);
+            if (val.equals("yes"))
+                result.append("<td>").append(col).append("</td>");
         }
         result.append("</tr>");
         return result.toString();
@@ -158,21 +155,20 @@ public class Graph {
             ital = "<i>";
             italEnd = "</i>";
         }
-        StringBuffer result = new StringBuffer();
+        StringBuilder result = new StringBuilder();
         result.append("<tr>");
         String formattedTerm = "<a href=\"" + kbHref + "&term=" + term + "\">" + term + "</a>";
-        result.append("<td>" + prefix + ital + formattedTerm + italEnd + "</td>");
-        Iterator<String> it = columnList.keySet().iterator();
-        while (it.hasNext()) {
-            String col = it.next();
-            String val = columnList.get(col);
+        result.append("<td>").append(prefix).append(ital).append(formattedTerm).append(italEnd).append("</td>");
+        String val;
+        for (String col : columnList.keySet()) {
+            val = columnList.get(col);
             if (val.equals("yes")) {
-                if (col.equals("documentation")) 
-                    result.append("<td><small>" + generateDocumentationColumn(kb,term,kbHref,language) + "</small></td>");
-                if (col.equals("direct-children")) 
-                    result.append("<td>" + generateChildrenColumn(kb,term) + "</td>");
-                if (col.equals("graph")) 
-                    result.append("<td>" + generateGraphLink(kb,term,kbHref) + "</td>");
+                if (col.equals("documentation"))
+                    result.append("<td><small>").append(generateDocumentationColumn(kb,term,kbHref,language)).append("</small></td>");
+                if (col.equals("direct-children"))
+                    result.append("<td>").append(generateChildrenColumn(kb,term)).append("</td>");
+                if (col.equals("graph"))
+                    result.append("<td>").append(generateGraphLink(kb,term,kbHref)).append("</td>");
             }
         }
         result.append("</tr>");
@@ -182,22 +178,23 @@ public class Graph {
     /** *************************************************************
      * Create a graph of a bounded size by incrementing the number of
      * levels above and below until the limit is reached or there are
-     * no more levels in the knowledge base from the given term and 
+     * no more levels in the knowledge base from the given term and
      * relation. creatGraphBody() does most of the work.
      */
-    public LinkedHashSet<String> createBoundedSizeGraph(KB kb, String term, String relation,
+    public Set<String> createBoundedSizeGraph(KB kb, String term, String relation,
                                         int size, boolean instances, String language) {
 
-        LinkedHashSet<String> result = new LinkedHashSet<String>();
-        LinkedHashSet<String> oldresult = new LinkedHashSet<String>();
+        Set<String> result = new LinkedHashSet<>();
+        Set<String> oldresult = new LinkedHashSet<>();
         int above = 1;
         int below = 1;
         int oldlimit = -1;
+        Set<String> checkAbove, checkBelow;
         while ((result.size() < size) && (result.size() != oldlimit)) {
             oldlimit = result.size();
             oldresult = result;
-            HashSet<String> checkAbove = new HashSet<String>();
-            HashSet<String> checkBelow = new HashSet<String>();
+            checkAbove = new HashSet<>();
+            checkBelow = new HashSet<>();
             result = createGraphBody(kb,checkAbove,term,relation,above,0,above,true,instances,language);
             result.addAll(createGraphBody(kb,checkBelow,term,relation,0,below,above,false,instances,language));
             above++;
@@ -219,13 +216,13 @@ public class Graph {
      * @param below the number of levels below the given term in the graph
      * @param instances whether to display instances below subclass relations
      */
-    public LinkedHashSet<String> createGraph(KB kb, String term, String relation,
+    public Set<String> createGraph(KB kb, String term, String relation,
                                  int above, int below, int termLimit, boolean instances, String language) {
 
         graphsize = 0;
-        LinkedHashSet<String> result = new LinkedHashSet<String>();  // a list of Strings
-        HashSet<String> checkAbove = new HashSet<String>();
-        HashSet<String> checkBelow = new HashSet<String>();
+        Set<String> result = new LinkedHashSet<>();  // a list of Strings
+        Set<String> checkAbove = new HashSet<>();
+        Set<String> checkBelow = new HashSet<>();
         result.add(createColumnHeader());
         result.addAll(createGraphBody(kb,checkAbove,term,relation,above,0,above,true,instances,language));
         result.addAll(createGraphBody(kb,checkBelow,term,relation,0,below,above,false,instances,language));
@@ -240,29 +237,32 @@ public class Graph {
      * @param check collects all the terms added to the graph so
      *              far, which is used to prevent cycles
      */
-    private LinkedHashSet<String> createGraphBody(KB kb, Set<String> check, String term, String relation,
+    private Set<String> createGraphBody(KB kb, Set<String> check, String term, String relation,
                                       int above, int below, int level,
                                       boolean show, boolean instances, String language) {
 
-        LinkedHashSet<String> result = new LinkedHashSet<String>();
-        int graphMax = Integer.valueOf(KBmanager.getMgr().getPref("adminBrowserLimit")).intValue();
+        Set<String> result = new LinkedHashSet<>();
+        int graphMax = Integer.parseInt(KBmanager.getMgr().getPref("adminBrowserLimit"));
         if (!check.contains(term) && graphsize < graphMax) {
             if (above > 0) {
-                ArrayList<Formula> stmtAbove = new ArrayList<Formula>();
+                List<Formula> stmtAbove;
                 if (!DB.emptyString(relation) && relation.equals("all"))
                     stmtAbove = kb.ask("arg",1,term);
-                else 
+                else
                     stmtAbove = kb.askWithRestriction(0,relation,1,term);
+
+                Formula f;
+                String newTerm;
                 for (int i = 0; i < stmtAbove.size(); i++) {
-                    Formula f = stmtAbove.get(i);
-                    String newTerm = f.getStringArgument(2);
+                    f = stmtAbove.get(i);
+                    newTerm = f.getStringArgument(2);
                     if (!newTerm.equals(term) && !KButilities.isCacheFile(f.sourceFile))
                         result.addAll(createGraphBody(kb,check,newTerm,relation,above-1,0,level-1,true,instances,language));
                     check.add(term);
                 }
             }
 
-            StringBuffer prefix = new StringBuffer();
+            StringBuilder prefix = new StringBuilder();
             for (int i = 0; i < level; i++)
                 prefix = prefix.append(indent);
 
@@ -280,7 +280,7 @@ public class Graph {
             String kbHref = https + "://" + hostname + ":" + port + "/sigma/Browse.jsp?lang=" + kb.language + "&kb=" + kb.name;
             if (show) {
                 graphsize++;
-                if (graphsize < 100)                 
+                if (graphsize < 100)
                     result.add(createGraphEntry(kb,prefix.toString(),kbHref,term,language));
                 else {
                     String endStr = "<tr><td><b>Truncating graph at 100 terms</b><P></td></tr>\n";
@@ -290,19 +290,21 @@ public class Graph {
                 }
             }
             if (below > 0) {
-                ArrayList<Formula> stmtBelow = kb.askWithRestriction(0,relation,2,term);
+                List<Formula> stmtBelow = kb.askWithRestriction(0,relation,2,term);
+                Formula f;
+                String newTerm;
                 for (int i = 0; i < stmtBelow.size(); i++) {
-                    Formula f = stmtBelow.get(i);
-                    String newTerm = f.getStringArgument(1);
+                    f = stmtBelow.get(i);
+                    newTerm = f.getStringArgument(1);
                     if (!newTerm.equals(term) && !KButilities.isCacheFile(f.sourceFile))
                         result.addAll(createGraphBody(kb,check,newTerm,relation,0,below-1,level+1,true,instances,language));
                     check.add(term);
                 }
-                if (instances && (stmtBelow == null || stmtBelow.size() == 0) && relation.equals("subclass")) {
+                if (instances && stmtBelow.isEmpty() && relation.equals("subclass")) {
                     stmtBelow = kb.askWithRestriction(0,"instance",2,term);
                     for (int i = 0; i < stmtBelow.size(); i++) {
-                        Formula f = stmtBelow.get(i);
-                        String newTerm = f.getStringArgument(1);
+                        f = stmtBelow.get(i);
+                        newTerm = f.getStringArgument(1);
                         if (!newTerm.equals(term) && !KButilities.isCacheFile(f.sourceFile))
                             result.addAll(createGraphBody(kb,check,newTerm,relation,0,below-1,level+1,true,instances,language));
                         check.add(term);
@@ -328,24 +330,21 @@ public class Graph {
     public boolean createDotGraph(KB kb, String term, String relation, int above, int below,
                                   int limitInt, String fname, String fileRestrict) throws IOException {
 
-        FileWriter fw = null;
-        PrintWriter pw = null;
         String sep = File.separator;
         String dir = System.getenv("CATALINA_HOME") + sep + "webapps" +
                 sep + "sigma" + sep + "graph";
         String filename = System.getenv("CATALINA_HOME") + sep + "webapps" +
                 sep + "sigma" + sep + "graph" + sep + fname;
         String graphVizDir = KBmanager.getMgr().getPref("graphVizDir");
-        try {
-            File dirfile = new File(dir);
-            if (!dirfile.exists())
-                dirfile.mkdir();
-            fw = new FileWriter(filename + ".dot");
+        File dirfile = new File(dir);
+        if (!dirfile.exists())
+            dirfile.mkdir();
+        try (FileWriter fw = new FileWriter(filename + ".dot");
+            PrintWriter pw = new PrintWriter(fw)) {
             if (debug) System.out.println("Graph.createGraphBody(): creating file at " + filename);
-            pw = new PrintWriter(fw);
-            HashSet<String> result = new HashSet<String>();
-            HashSet<String> start = new HashSet<String>();
-            HashSet<String> checked = new HashSet<String>();
+            Set<String> result;
+            Set<String> start = new HashSet<>();
+            Set<String> checked = new HashSet<>();
             start.add(term);
             if (relation.equals("all"))
                 result = createDotGraphNetBody(kb, start, checked, limitInt, fileRestrict);
@@ -355,35 +354,39 @@ public class Graph {
                 result.addAll(createDotGraphBody(kb, start, checked, relation, above, below, false));
             }
             pw.println("digraph G {");
-            pw.println("  rankdir=LR");
-            Iterator<String> it = result.iterator();
-            while (it.hasNext()) {
-                String s = it.next();
+            pw.println("  node [color=black, fontcolor=black];"); // Black text and borders
+            pw.println("  edge [color=black];"); // Black edges
+            pw.println("  rankdir=LR;");
+            for (String s : result) {
                 pw.println(s);
             }
             pw.println("}");
-            pw.close();
-            fw.close();
-            
-            String command = graphVizDir + File.separator + "dot " + filename + ".dot -Tgif";            
-            Process proc = Runtime.getRuntime().exec(command);
-            System.out.println("Graph.createDotGraph(): exec command: " + command);
-            BufferedInputStream img = new BufferedInputStream(proc.getInputStream());            
-            RenderedImage image = ImageIO.read(img);            
-            File file = new File(filename + ".gif");
-            ImageIO.write(image, "gif", file);
-            System.out.println("Graph.createDotGraph(): write image file: " + file);
-            return true;
+            pw.flush();
+
+            // Build a ${graph}.png from an input file
+            // From: https://graphviz.org/doc/info/command.html#-O
+            ProcessBuilder pb = new ProcessBuilder(
+                graphVizDir + File.separator + "dot",
+                "-Tpng",
+                "-O",
+                filename + ".dot"
+            );
+
+            File file = new File(filename + ".dot.png");
+            System.out.println("Graph.createDotGraph(): exec command: " + pb.command());
+            pb.directory(file.getParentFile());
+            File log = new File(file.getParentFile(),"log");
+            pb.redirectErrorStream(true);
+            pb.redirectOutput(Redirect.appendTo(log)); // <- in case of any errors
+            pb.start();
         }
-        catch (java.io.IOException e) {
-            String err = "Error writing file " + filename + ".dot\n" + e.getMessage();
+        catch (Exception e) {
+            String err = "Error writing file " + filename + ".dot.png\n" + e.getMessage();
             errors.add(err);
             throw new IOException(err);
         }
-        finally {
-            if (pw != null) pw.close();
-            if (fw != null) fw.close();            
-        }
+        System.out.println("Graph.createDotGraph(): write image file: " + filename + ".dot.png");
+        return true;
     }
 
     /** *************************************************************
@@ -393,19 +396,17 @@ public class Graph {
 
         if (StringUtil.emptyString(s))
             return true;
-        if (Formula.isLogicalOperator(s) || Formula.isMathFunction(s) || Formula.isVariable(s) ||
+        return Formula.isLogicalOperator(s) || Formula.isMathFunction(s) || Formula.isVariable(s) ||
                 Formula.isComparisonOperator(s) || Formula.DOC_PREDICATES.contains(s) ||
                 StringUtil.isNumeric(s) || Formula.DEFN_PREDICATES.contains(s) ||
-                StringUtil.isQuotedString(s))
-            return true;
-        return false;
+                StringUtil.isQuotedString(s);
     }
 
     /** *************************************************************
      * The main body for createDotGraph() when no relation is specified.
      * Don't graph math, logical operators or documentation relations
      */
-    private HashSet<String> createDotGraphNetBody(KB kb, HashSet<String> startSet, HashSet<String> checkedSet,
+    private Set<String> createDotGraphNetBody(KB kb, Set<String> startSet, Set<String> checkedSet,
                                                int size, String fileRestrict) {
 
         if (!StringUtil.emptyString(fileRestrict) && !kb.containsFile(fileRestrict)) {
@@ -413,13 +414,18 @@ public class Graph {
             return null;
         }
         System.out.println("createDotGraphNetBody(): start set: " + startSet);
-        HashSet<String> result = new HashSet<String>();
-        HashSet<String> newStartSet = new HashSet<String>();
-        while (startSet.size() > 0) {
-            Iterator<String> it = startSet.iterator();
-            String term = it.next();
+        Set<String> result = new HashSet<>();
+        Set<String> newStartSet = new HashSet<>();
+        Iterator<String> it;
+        String term, parent, rel, link, arrow, s, str;
+        boolean removed;
+        List<Formula> stmts, cons;
+        Formula f;
+        while (!startSet.isEmpty()) {
+            it = startSet.iterator();
+            term = it.next();
             System.out.println("createDotGraphNetBody(): checking term: " + term);
-            boolean removed = startSet.remove(term);
+            removed = startSet.remove(term);
             if (!removed) {
                 String err = "Error in Graph.createDotGraphNetBody(): " + term + " not removed";
                 errors.add(err);
@@ -427,25 +433,24 @@ public class Graph {
             }
             if (StringUtil.isQuotedString(term) || Formula.isLogicalOperator(term))
                 continue;
-            ArrayList<Formula> stmts;
 
             stmts = kb.ask("arg",1, term);
             for (int i = 0; i < stmts.size(); i++) {
-                Formula f = stmts.get(i);
+                f = stmts.get(i);
                 if (f.isCached())
                     continue;
                 else {
-                    String parent = f.getStringArgument(2);
+                    parent = f.getStringArgument(2);
                     if (rejectedTerm(parent))
                         continue;
                     if (!StringUtil.emptyString(fileRestrict) && !FileUtil.noPath(f.getSourceFile()).equals(fileRestrict))
                         continue;
-                    String rel = f.getStringArgument(0);
+                    rel = f.getStringArgument(0);
                     if (Formula.DOC_PREDICATES.contains(rel))
                         continue;
-                    String link = "[ label = \"" + rel + "\" ]";
-                    String arrow = " -> ";
-                    String s = "  \"" + parent + "\"" + arrow + "\"" + term + "\" " + link + ";";
+                    link = "[ label = \"" + rel + "\" ]";
+                    arrow = " -> ";
+                    s = "  \"" + parent + "\"" + arrow + "\"" + term + "\" " + link + ";";
                     System.out.println("createDotGraphNetBody(): result in adding parents: " + s);
                     graphsize++;
                     if (graphsize < size)
@@ -460,21 +465,21 @@ public class Graph {
 
             stmts = kb.ask("arg",2, term);
             for (int i = 0; i < stmts.size(); i++) {
-                Formula f = stmts.get(i);
+                f = stmts.get(i);
                 if (f.isCached())
                     continue;
                 else {
-                    String parent = f.getStringArgument(1);
+                    parent = f.getStringArgument(1);
                     if (rejectedTerm(parent))
                         continue;
                     if (!StringUtil.emptyString(fileRestrict) && !FileUtil.noPath(f.getSourceFile()).equals(fileRestrict))
                         continue;
-                    String rel = f.getStringArgument(0);
+                    rel = f.getStringArgument(0);
                     if (Formula.DOC_PREDICATES.contains(rel))
                         continue;
-                    String link = "[ label = \"" + rel + "\" ]";
-                    String arrow = " -> ";
-                    String s = "  \"" + term + "\"" + arrow + "\"" + parent + "\" " + link + ";";
+                    link = "[ label = \"" + rel + "\" ]";
+                    arrow = " -> ";
+                    s = "  \"" + term + "\"" + arrow + "\"" + parent + "\" " + link + ";";
                     System.out.println("createDotGraphNetBody(): result in adding children: " + s);
                     graphsize++;
                     if (graphsize < size)
@@ -488,32 +493,32 @@ public class Graph {
             }
 
             stmts = kb.ask("ant",0,term);
-            ArrayList<Formula> cons = kb.ask("ant",0,term);
+            cons = kb.ask("ant",0,term);
             if (cons != null)
                 stmts.addAll(cons);
             for (int i = 0; i < stmts.size(); i++) {
-                Formula f = stmts.get(i);
+                f = stmts.get(i);
                 if (f.isCached())
                     continue;
                 else {
                     Set<String> terms = f.collectTerms();
-                    for (String s : terms) {
-                        if (rejectedTerm(s) || term.equals(s))
+                    for (String trm : terms) {
+                        if (rejectedTerm(trm) || trm.equals(trm))
                             continue;
                         if (!StringUtil.emptyString(fileRestrict) && !FileUtil.noPath(f.getSourceFile()).equals(fileRestrict))
                             continue;
-                        String rel = "link";
-                        String link = "[ dir=none, label = \"" + rel + "\" ]";
-                        String arrow = " -> ";
-                        String str = "  \"" + term + "\"" + arrow + "\"" + s + "\" " + link + ";";
+                        rel = "link";
+                        link = "[ dir=none, label = \"" + rel + "\" ]";
+                        arrow = " -> ";
+                        str = "  \"" + trm + "\"" + arrow + "\"" + trm + "\" " + link + ";";
                         graphsize++;
                         if (graphsize < size)
                             result.add(str);
                         else
                             return result;
-                        checkedSet.add(term);
-                        if (!checkedSet.contains(s))
-                            newStartSet.add(s);
+                        checkedSet.add(trm);
+                        if (!checkedSet.contains(trm))
+                            newStartSet.add(trm);
                     }
                 }
             }
@@ -525,14 +530,14 @@ public class Graph {
     /** *************************************************************
      * The main body for createDotGraph().
      */
-    private HashSet<String> createDotGraphBody(KB kb, HashSet<String> startSet, HashSet<String> checkedSet, 
+    private Set<String> createDotGraphBody(KB kb, Set<String> startSet, Set<String> checkedSet,
                                    String relation, int above, int below, boolean upSearch) {
 
         System.out.println("createDotGraph(): start set: " + startSet);
-        HashSet<String> result = new HashSet<String>();
-        HashSet<String> newStartSet = new HashSet<String>();
+        Set<String> result = new HashSet<>();
+        Set<String> newStartSet = new HashSet<>();
         newStartSet.addAll(startSet);
-        
+
         if (upSearch) {
             above--;
             if (above < 0) return result;
@@ -541,11 +546,17 @@ public class Graph {
             below--;
             if (below < 0) return result;
         }
-        while (startSet.size() > 0) {
-            Iterator<String> it = startSet.iterator();
-            String term = (String) it.next();
+
+        Iterator<String> it;
+        String term, child, parent, link, arrow, rel, s;
+        boolean removed;
+        List<Formula> stmts;
+        Formula f;
+        while (!startSet.isEmpty()) {
+            it = startSet.iterator();
+            term = (String) it.next();
             System.out.println("createDotGraph(): checking term: " + term);
-            boolean removed = startSet.remove(term);
+            removed = startSet.remove(term);
             if (!removed) {
                 String err = "Error in Graph.createDotGraphBody(): " + term + " not removed";
                 errors.add(err);
@@ -553,7 +564,6 @@ public class Graph {
             }
             if (StringUtil.isQuotedString(term))
                 continue;
-            ArrayList<Formula> stmts;
             if (upSearch) {
                 stmts = kb.askWithRestriction(0, relation, 1, term);
             }
@@ -562,20 +572,20 @@ public class Graph {
             }
 
             for (int i = 0; i < stmts.size(); i++) {
-                Formula f = stmts.get(i);
+                f = stmts.get(i);
                 if (f.isCached())
                     continue;
                 else {
-                    String child = f.getStringArgument(1);
-                    String parent = f.getStringArgument(2);
-                    String link = "";
-                    String arrow = "->";
-                    String rel = f.getStringArgument(0);
+                    child = f.getStringArgument(1);
+                    parent = f.getStringArgument(2);
+                    link = "";
+                    arrow = "->";
+                    rel = f.getStringArgument(0);
                     if (relation.equals("all")) {
                         link = "[ label = \"" + rel + "\" ]";
                         arrow = "--";
                     }
-                    String s = "  \"" + parent + "\"" + arrow + "\"" + child + "\" " + link + ";";
+                    s = "  \"" + parent + "\"" + arrow + "\"" + child + "\" " + link + ";";
                     graphsize++;
                     if (graphsize < 100)
                         result.add(s);
@@ -590,7 +600,7 @@ public class Graph {
                     }
                 }
                 result.addAll(createDotGraphBody(kb,newStartSet,checkedSet,relation,above,below,upSearch));
-            } 
+            }
         }
         return result;
     }
@@ -614,21 +624,18 @@ public class Graph {
         if (args != null && args.length > 1 && args[0].equals("-h")) {
             showHelp();
         }
-        KBmanager.getMgr().initializeOnce();
         if (args != null && args.length > 2 && args[0].equals("-g")) {
+            KBmanager.getMgr().initializeOnce();
             KB kb = KBmanager.getMgr().getKB(KBmanager.getMgr().getPref("sumokbname"));
             Graph g = new Graph();
-            String start = args[1];
+            String term = args[1];
             String relation = args[2];
-            HashSet<String> checked = new HashSet<String>();
-            HashSet<String> startSet = new HashSet<String>();
             String fileRestrict = "";
-            startSet.add(start);
             try {
-                    g.createDotGraph(kb, start, relation, 2, 2, 100, "graph.txt", fileRestrict);
+                g.createDotGraph(kb, term, relation, 2, 2, 100, "graph.txt", fileRestrict);
             }
-            catch (Exception e) {
-                System.out.println(e.getMessage());
+            catch (IOException e) {
+                System.err.println(e.getMessage());
                 e.getStackTrace();
             }
         }
